--- a/source/css/download.css
+++ b/source/css/download.css
@@ -51,9 +51,19 @@
     width: 1170px;
     margin-bottom: 154px; }
   .downloads__flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between; }
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .downloads__flex__item {
     width: 450px;
     padding-top: 74px; }
