--- a/source/css/stats.css
+++ b/source/css/stats.css
@@ -47,10 +47,18 @@
     cursor: pointer; }
 
 .stats__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   color: #333;
-  flex-wrap: wrap;
-  justify-content: space-between; }
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .stats__item__digit {
   font-size: 40px;
@@ -66,8 +74,14 @@
   .stats {
     width: 1170px; }
   .stats__flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between; }
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .stats__flex__item {
     padding-top: 42px;
     width: 470px; }
