--- a/source/sass/news.scss
+++ b/source/sass/news.scss
@@ -88,6 +88,8 @@
 	padding-left: 15px;
 	border-radius: 7px;
 	border-color: #DADADA;
+	font-size: 16px;
+	line-height: 32px;
 
 	&::placeholder{
 		font-size: 16px;
