--- a/source/css/FAQ.css
+++ b/source/css/FAQ.css
@@ -1,4 +1,6 @@
 .FAQ {
+  width: 375px;
+  margin: 0 auto;
   margin-bottom: 169px; }
 
 .FAQ__abbr {
@@ -22,6 +24,42 @@
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 46px; }
+
+.accordion {
+  background-color: #fff;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: bold;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+
+.active, .accordion:hover {
+  background-color: #ccc; }
+
+.accordion:after {
+  content: '\002B';
+  font-weight: bold;
+  float: right;
+  margin-left: 5px; }
+
+.active:after {
+  content: "\2212"; }
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  -o-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out; }
 
 @media (min-width: 1200px) {
   .FAQ {
