--- a/source/css/price.css
+++ b/source/css/price.css
@@ -24,7 +24,8 @@
   line-height: 32px; }
   .price__toggle1:hover, .price__toggle1:active, .price__toggle1:focus {
     outline: none;
-    cursor: pointer; }
+    cursor: pointer;
+    color: rgba(51, 51, 51, 0.5); }
 
 .price__toggle2 {
   font-size: 16px;
@@ -33,12 +34,17 @@
   background: none; }
   .price__toggle2:hover, .price__toggle2:active, .price__toggle2:focus {
     outline: none;
-    cursor: pointer; }
+    cursor: pointer;
+    color: rgba(51, 51, 51, 0.5); }
 
 .price__toggle-center {
   text-align: center; }
 
-.price__list {
+.price__list-month {
+  padding-left: 3px;
+  padding-right: 3px; }
+
+.price__list-yearly {
   padding-left: 3px;
   padding-right: 3px; }
 
@@ -94,6 +100,9 @@
     color: white;
     cursor: pointer; }
 
+.price--hidden {
+  display: none; }
+
 @media (min-width: 1200px) {
   .price {
     width: 1170px;
@@ -109,10 +118,28 @@
     margin-bottom: 46px; }
   .price__toggle-center {
     margin-bottom: 54px; }
-  .price__list {
+  .price__list-month {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 100%; }
+  .price__list-yearly {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%; }
+  .price--hidden {
+    display: none; }
   .price__list__item {
     width: 300px;
     margin: 0; } }
