--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -84,6 +84,12 @@
 	font-size: 16px;
 	line-height: 32px;
 	color: #333;
+
+	&:hover,
+	&:active,
+	&:focus{
+		color: rgba(51, 51, 51, 0.5);
+	}
 }
 
 
